# SafeAgent

./: .gitignore  LICENSE  README.md  calibrate_model.py  dashboard.py  evaluate_model.py  pyproject.toml  requirements.txt  safeagent_wrap.py  structure.txt  train_model.py
data/: calibration.csv  training.csv
docs/: SafeAgent_Project_Guide.docx
safeagent/: __init__.py  action_verification.py  advisory.py  analytics.py  approval_console.py  certification.py  cost_model.py  dashboard_data.py  execution.py  features.py  gate.py  logging_store.py  mcp_server.py  ml_pipeline.py  models.py  risk_models.py
tests/: test_action_verification.py  test_approval_client.py  test_certification_and_log.py  test_cost_model.py  test_dashboard.py  test_execution_and_pipeline.py  test_features_and_risk_models.py  test_gate.py  test_mcp_server.py  test_mcp_stdio_integration.py
tools/: create_safeagent_guide.py
