[project]
name = "safeagent"
version = "0.1.0"
description = "A human-in-the-loop safety gate for AI-generated shell commands"
requires-python = ">=3.10"
dependencies = ["streamlit>=1.37", "altair>=5.0", "mcp>=1.0"]

[project.optional-dependencies]
ai = ["openai>=1.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=.pytest-tmp"

[tool.coverage.run]
source = ["safeagent"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.setuptools.packages.find]
include = ["safeagent*"]

[tool.ruff]
line-length = 100
